feat: use per-collection VectorStore via factory to respect collection param in indexing and search